# keepass-ng

./: .gitignore  Cargo.toml  README.md  SECURITY.md  rustfmt.toml
.github/workflows/: ci.yml  rust.yml
src/: config.rs  error.rs  hmac_block_stream.rs  io.rs  key.rs  lib.rs  variant_dictionary.rs
src/crypt/: ciphers.rs  kdf.rs  mod.rs
src/db/: entry.rs  group.rs  iconid.rs  meta.rs  mod.rs  node.rs  otp.rs
src/format/: kdb.rs  kdbx3.rs  kdbx_header_field_id.rs  mod.rs
src/format/kdbx4/: dump.rs  mod.rs  parse.rs
src/xml_db/: mod.rs
src/xml_db/dump/: entry.rs  group.rs  meta.rs  mod.rs
src/xml_db/parse/: entry.rs  group.rs  meta.rs  mod.rs
tests/: entry_tests.rs  file_read_tests.rs  large_database_roundtrip_tests.rs
