[package]
name = "keepass"
description = "KeePass .kdbx database file parser"
edition = "2018"

homepage = "https://github.com/sseemayer/keepass-rs"
repository = "https://github.com/sseemayer/keepass-rs"
documentation = "https://docs.rs/keepass"

version = "0.6.1"
authors = ["Stefan Seemayer <stefan@seemayer.de>"]
license = "MIT"

readme = "README.md"

[features]
utilities = ["anyhow", "clap", "rpassword", "serialization", "totp"]
serialization = ["serde", "serde_json", "chrono/serde"]
totp = ["totp-lite", "url", "base32"]
save_kdbx4 = []

default = ["utilities", "save_kdbx4"]

[dependencies]
aes = "0.8"
anyhow = { version = "1", optional = true }
base32 = { version = "0.4.0", optional = true }
base64 = "0.21"
block-modes = "0.9"
byteorder = "1"
cbc = "0.1"
chacha20 = "0.9"
chrono = { version = "0.4.23", default-features = false, features = ["serde", "clock", "std"] }
cipher = { version = "0.4", features = ["std"] }
clap = { version = "4", optional = true, features = ["derive"] }
flate2 = "1"
getrandom = { version = "0.2", features = ["std"] }
hex-literal = "0.4"
hmac = "0.12"
rpassword = { version = "7", optional = true }
rust-argon2 = "1.0"
salsa20 = "0.10"
secstr = "0.5"
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
sha2 = "0.10"
thiserror = "1"
totp-lite = { version = "2.0.0", optional = true }
twofish = "0.7"
url = { version = "2.2.2", optional = true }
uuid = { version = "1.2", features = ["v4", "serde"] }
xml-rs = "0.8"

[dev-dependencies]
rustfmt = "0.10.0"

[[bin]]
# parse a KeePass database and output as a JSON document
name = "kp-dump-json"
required-features = ["utilities"]

[[bin]]
# decrypt a KeePass database and output the inner XML document
name = "kp-dump-xml"
required-features = ["utilities"]

[[bin]]
# decrypt a KeePass database and show the contained data
name = "kp-show-db"
required-features = ["utilities"]

[[bin]]
# decrypt a KeePass database and show the TOTP value for an entry
name = "kp-show-otp"
required-features = ["utilities"]

[[bin]]
# get the version of a KeePass database file
name = "kp-get-version"
required-features = ["utilities"]

[[bin]]
# parse and write a KeePass database (to check if all fields are kept)
name = "kp-rewrite"
required-features = ["utilities", "save_kdbx4"]
